# iseq-prof

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-daily-test.yml  python-package.yml  python-publish.yml
iseq_prof/: __init__.py  _accession.py  _clan.py  _cli.py  _confusion.py  _env.py  _example.py  _file.py  _genbank.py  _gff.py  _organism_result.py  _prof_acc.py  _profiling.py  _tables.py  _typing.py  _version.py  filedb.py  osolut_space.py  overall_solut_space.py  pfam.py  sam.py  solut_space.py  util.py
iseq_prof/_cli/: _cli.py  _compute_clans.py  _compute_scores.py  _hmm_filter.py  _info.py  _info_fail.py  _info_prof.py  _info_target.py  _merge_scores.py  _plot_acc_eeplot.py  _plot_eeplot.py  _plot_eevalues.py  _plot_prof_hits.py  _plot_roc.py  _progress.py  _util.py
iseq_prof/plot/: __init__.py  _align.py  _evalue.py  _roc.py  _scores.py
iseq_prof/test/: test_accession.py  test_confusion_matrix.py  test_fasta.py  test_genbank.py  test_prof_acc.py  test_profiling.py  test_profmark.py  test_solut_space.py
iseq_profmark/: __init__.py  _env.py  _example.py  _genbank.py  _profmark.py  fasta.py  typing.py
iseq_profmark/test/: test_fasta.py  test_genbank.py  test_profmark.py
script/: build-genbank-catalog.py
