[build-system]
requires = ["setuptools>=47.1.1", "wheel>=0.34.2", "setuptools_scm[toml]>=4.1.2",
            "pytest-runner>=5.2", "twine>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "iseq_profmark/_version.py"

[tool.isort]
profile = "black"
src_paths = ["iseq-profmark"]
known_third_party = [
  "biopython",
  "fasta-reader",
  "hmmer",
  "hmmer-reader",
  "iseq",
  "numpy",
  "pandas",
  "pytest",
  "pytest",
]
