[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = ISEQ profmark
download_url = https://github.com/EBI-Metagenomics/iseq-profmark
keywords = iseq, profmark
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = iseq-profmark
url = https://github.com/EBI-Metagenomics/iseq-profmark

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    biopython>=1.77
    fasta-reader>=0.0.10
    hmmer-reader>=0.0.9
    hmmer>=0.0.5
    iseq>=0.0.5
    numpy>=1.18.1
    pandas>=1.0.1
    pooch>=1.1.1
    pytest>=5.3.5

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir profmark
